# ecsc22-badge

./: .gitignore
firmware/: CMakeLists.txt  cdc.c  cdc.h  console.c  console.h  interpolator.c  interpolator.h  menu.c  menu.h  msc_disk.c  msc_disk.h  nvs.c  nvs.h  ozone.jdebug  rp1.c  rp2.c  rp_test.c  tusb_config.h  uart.c  uart.h  usb_descriptors.c
firmware/challs/: chall1.c  chall1.h  chall2.c  chall2.h  chall3.c  chall3.h  chall4.c  chall4.h
firmware/solutions/: 2.py  3.py  4.py
firmware/writeups/: Challenge1.md  Challenge2.md  Challenge3.md  Challenge4.md
hardware/enisadev/: BoM.csv  enisadev.kicad_prl  enisadev.kicad_pro  enisadev.kicad_sch-bak  enisadev.xml  fp-lib-table
hardware/enisadev/ENISA22_ArtLib/: ENISA22_B.Cu.kicad_mod  ENISA22_B.Mask.kicad_mod  ENISA22_B.SilkS.kicad_mod  ENISA22_EdgeCut.dxf  ENISA22_F.Cu.kicad_mod  ENISA22_F.Mask.kicad_mod  ENISA22_F.Mask_2.kicad_mod  ENISA22_F.SilkS.kicad_mod  ENISA22_F.SilkS_FrontPosting.kicad_mod  ENISA22_HANDLE_B.SilkS.kicad_mod
hardware/enisadev/gerbers/: enisadev-B_Cu.gbr  enisadev-B_Mask.gbr  enisadev-B_Paste.gbr  enisadev-B_Silkscreen.gbr  enisadev-Edge_Cuts.gbr  enisadev-F_Cu.gbr  enisadev-F_Mask.gbr  enisadev-F_Paste.gbr  enisadev-F_Silkscreen.gbr  enisadev-NPTH.drl  enisadev-PTH.drl  enisadev-bottom-pos.csv  enisadev-bottom.pos  enisadev-job.gbrjob  enisadev-top-pos.csv  enisadev-top.pos
hardware/enisadev/pnp/: enisadev-bottom-pos.csv  enisadev-bottom.pos  enisadev-top-pos.csv  enisadev-top.pos  enisadev.csv  enisadev.numbers
hardware/enisadev/silkscreen.pretty/: sigil.kicad_mod
